# ChangeLog for dev-libs/ppl
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/ppl/ChangeLog,v 1.3 2008/11/30 02:59:13 vapier Exp $

*ppl-0.10 (30 Nov 2008)

  30 Nov 2008; Mike Frysinger <vapier@gentoo.org> metadata.xml,
  +ppl-0.10.ebuild:
  Version bump #245799 by Sigmatador. Fix doc install #241276 by Diego E.
  Pettenò. Control prolog support via USE=prolog #249320 by Diego E.
  Flameeyes Pettenò.

  21 Sep 2008; Robin H. Johnson <robbat2@gentoo.org> +metadata.xml:
  Mike is a slacker and did not include metadata.xml for his new package.

*ppl-0.10_pre27 (21 Sep 2008)

  21 Sep 2008; Mike Frysinger <vapier@gentoo.org> +ppl-0.10_pre27.ebuild:
  Initial ebuild based on work from Zhang Le for gcc-4.4+.
