@@ -3,14 +3,14 @@ Hash: SHA1
 
 DIST ppl-0.10.tar.bz2 11165603 RMD160 7ca4944d257742a08c770b01bf2572fd87e3ba00 SHA1 25b7507f440dbde44f36b9e9db9034ce910509f8 SHA256 cc96b02be56bed1c39bdb47bcb1b20d3b16cd7123af110dbe6937d4c4506c4e1
 DIST ppl-0.10pre27.tar.bz2 8754070 RMD160 48cc4e6dc935d66fe9083fd1da798c572ffb54ab SHA1 805e75050dd61a27aadf44c76a82259f31539805 SHA256 f06ff4a25320cb51e730a992e48d4fb95bcacc1e71337b587c6e06223e9f06e8
-EBUILD ppl-0.10.ebuild 1132 RMD160 a49d6572fdb17309d08ca2f0d8fc8ebe8e22c948 SHA1 635bf142c93d52be7c3f4ab2ff7c348ff1df0134 SHA256 bb9496b39e6650206a49d6cfe7c62d26c597f24dd7a594d69753159461db8cb6
+EBUILD ppl-0.10.ebuild 1145 RMD160 f49d583857535463747af82f88c2277942700020 SHA1 485709975ed6d442ea7b858d117f3a02be568bcd SHA256 870a277234776cdf619329ccf67dc2e66a34506e05d2729676af720e7e10dee8
 EBUILD ppl-0.10_pre27.ebuild 758 RMD160 b76677e9c2ef7288db019328a86d9b64bf337478 SHA1 89870b48f4e20e41492a41a01637b278c8da0fe6 SHA256 01632ca9327ef265c14d000a9d6f34eab9095a327c51bffbca0a994e4ac02d6b
-MISC ChangeLog 781 RMD160 319ef9a2c822575dcff00271902256c2c485a848 SHA1 c4d705bbf52303beb1bbcebe964e1516b26436e8 SHA256 348d970245f5a81d648678c959e3e3d49751e86bc625c0e9b30aee4a2dbf3780
+MISC ChangeLog 887 RMD160 46d74af5503eac966b06b6708750d90a503e56b1 SHA1 e654cd5b8c3fcd750a14045c72824ac2418648b0 SHA256 a4e2e5fd8bf8d6c50fa43cf1a88c89c9213cbbf466012435fa9ea90b6c2d4779
 MISC metadata.xml 229 RMD160 891aadd4776784d39fe74363159a5693427e8687 SHA1 3a0841a0116d30c599b9bcc5235f3f7eacdbdd20 SHA256 5bacdb16039c1356761b3f0b2b4b113aaeda28accfe65075cb529e32b7c0eacb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkyAYgACgkQ67wieSYcaxcLMgCgjLU9wNE/Pef6Dz35vbi5/Jf9
-3HEAn1s8EHtiXxjHV00iB8J5qZzhlyug
-=Dn4y
+iEYEARECAAYFAkk0FkIACgkQ67wieSYcaxeipwCfciHExwK6Fo5ClFTy98Gc7f6B
+X2IAn3/wY0P7bmW+vEvyqjSD/JM55mG3
+=RJwu
 -----END PGP SIGNATURE-----
